# code

./: README.md
00_file/: imx6ull-14x14-xiong-emmc.dts  uboot-config
A01_deviceTree/: .gitignore
A01_deviceTree/APP/: CMakeLists.txt  cahrdevapp.cpp  chardevapp.h  ledapp.cpp  ledapp.h  main.cpp
A01_deviceTree/driver/: Makefile  linux_gpio.h  main.c  main.h  main_file.c  main_file.h
A02_deviceTree＿beep/APP/: CMakeLists.txt  beepapp.cpp  chardevapp.h  main.cpp
A02_deviceTree＿beep/driver/: Makefile  chardevice.c  chardevice.h  linux_gpio.c  main.c  main.h  main_file.c
A03_deviceTree＿key/APP/: CMakeLists.txt  cahrdevapp.cpp  chardevapp.h  keyapp.cpp  keyapp.h  main.cpp
A03_deviceTree＿key/driver/: Makefile  linux_gpio.c  linux_gpio.h  main.c  main.h  main_file.c  main_file.h
